Replace String.format by String#formatted